<resources>
    <string name="app_name">Simple RPN Calculator</string>

    <!-- Strings used for fragments for navigation -->
    <string name="clear_all">CLEAR ALL</string>
    <string name="clear">CLEAR</string>
    <string name="erase">BACK</string>
    <string name="enter">ENTER</string>

    <string name="percent">%󠀥</string>
    <string name="percent_add">+%</string>
    <string name="percent_subtract">-%</string>

    <string name="divide">➗</string>
    <string name="multiple">✖️</string>
    <string name="subtract">➖</string>
    <string name="add">➕</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="decimal_point" translatable="false">.</string>
    <string name="negate">+/-</string>

    <string name="error_syntax"><b>Syntax Error</b></string>
    <string name="error_too_few_arg">%1s Error: Too few arguments.</string>
    <string name="error_arithmetic_overflow">Error: Arithmetic overflow.</string>
    <string name="error_divide_by_zero">%1s Error: Divide by zero.</string>

    <string name="request_login_text">Please sign in to request support.</string>

    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_detail_description">Enter detail description of your issue.</string>

    <string name="contact_support">Contact Support</string>
    <string name="email_support">Email Support</string>
    <string name="eula" translatable="false">EULA</string>
    <string name="title_activity_eula">End User License Agreement</string>
    <string name="delete">DELETE</string>

</resources>