<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stackRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/inputEditText"
        style="@style/inputTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:backgroundTint="@color/light_green"
        android:elegantTextHeight="true"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:digits="0123456789.,"
        android:textAlignment="viewEnd"
        android:textIsSelectable="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:columnCount="4"
        android:orientation="horizontal"
        android:useDefaultMargins="false"
        tools:context=".MainFragment">

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/clearAllButton"
                style="@style/editorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_all" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/enterButton"
                style="@style/editorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/deleteButton"
                style="@style/editorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/eraseButton"
                style="@style/editorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/erase" />
        </LinearLayout>


        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/negateButton"
                style="@style/operatorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/negate" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/percentButton"
                style="@style/operatorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percent" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/percentAddButton"
                style="@style/operatorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percent_add" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/percentSubtractButton"
                style="@style/operatorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percent_subtract" />
        </LinearLayout>


        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/sevenButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/eightButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/nineButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nine" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/divideButton"
                style="@style/operatorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/divide" />
        </LinearLayout>


        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/fourButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/fiveButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/sixButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/six" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/multiplyButton"
                style="@style/operatorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiple" />
        </LinearLayout>


        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/oneButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/twoButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/threeButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/subtractButton"
                style="@style/operatorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtract" />
        </LinearLayout>


        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/zeroButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/decimalPointButton"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/decimal_point" />
        </LinearLayout>

        <LinearLayout
            style="@style/buttonLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/addButton"
                style="@style/operatorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add" />
        </LinearLayout>

    </GridLayout>

</LinearLayout>
